이미지를 추가함

--- a/_posts/2021-08-16-first.md
+++ b/_posts/2021-08-16-first.md
@@ -18,3 +18,9 @@ title:  "GitHub 블로그 첫 포스팅"
 _posts/2021-08-16-first.md 이런식으로 파일명 적습니다.
 
 first, second... 블로그 포스팅 할때마다 숫자 늘려가면 됩니다.
+
+
+
+최종 따라갈 Theme
+
+![image_Jekyll_theme_blog](C:\Users\KoBongHun\OneDrive - donga.ac.kr\바탕 화면\BH946_github_blog\BH946.github.io\images\2021-08-16-first\image_Jekyll_theme_blog.png)
