태그와 카테고리 추가

--- a/_posts/2021-08-16-first.md
+++ b/_posts/2021-08-16-first.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 title:  "GitHub 블로그 첫 포스팅"
-categories : coding
+categories : test
+tag : [blog, jekyll]
 ---
 
 # GitHub 블로그 첫 포스팅 하는법
