--- a/_posts/2021-08-16-first.md
+++ b/_posts/2021-08-16-first.md
@@ -2,6 +2,9 @@
 title:  "GitHub 블로그 첫 포스팅"
 categories : test
 tag : [blog, jekyll]
+author_profile: false
+sidebar:
+   nav: "docs"
 ---
 
 # GitHub 블로그 첫 포스팅 하는법
