--- a/_posts/2021-08-16-second.md
+++ b/_posts/2021-08-16-second.md
@@ -1,6 +1,10 @@
 ---
 title:  "Kotiln 기능 정리 (프로젝트에서 이용한)"
 toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+   nav: "docs"
 ---
 
 # Kotiln 기능 정리 (프로젝트에서 이용한)
