--- a/_posts/2021-08-17-GitHub에 안드로이드 소스 올리기.md
+++ b/_posts/2021-08-17-GitHub에 안드로이드 소스 올리기.md
@@ -3,5 +3,4 @@
 https://asukim.tistory.com/70 확인
 
 
-
-참고로 어플 소스같은 경우는 올리면 안돼는 (Key값이라던지)것은 올리지 않게 조심할것.
+참고로 어플 소스같은 경우는 올리면 안되는 (Key값이라던지)것은 올리지 않게 조심할것.
