--- a/_posts/2021-08-17-GitHub에 안드로이드 소스 올리기.md
+++ b/_posts/2021-08-17-GitHub에 안드로이드 소스 올리기.md
@@ -1,4 +1,11 @@
-# GitHub에 안드로이드 소스 올리기
+---
+title:  "GitHub에 안드로이드 소스 올리기"
+categories : test
+tag : [android, github]
+author_profile: false
+sidebar:
+   nav: "docs"
+---
 
 https://asukim.tistory.com/70 확인
 
