--- a/_posts/Algorithm/2022-01-28-(C언어)가우스 조르단 소거법.md
+++ b/_posts/Algorithm/2022-01-28-(C언어)가우스 조르단 소거법.md
@@ -232,5 +232,4 @@ int main(void) {
 
 ## 실행화면
 
-![실행화면](C:\Users\KoBongHun\OneDrive - donga.ac.kr\바탕 화면\MarkDown\알고리즘\실행화면.png)
-
+![실행화면](\images\2022-01-28-(C언어)가우스 조르단 소거법\Gauss_Jordan_Run.png)
