--- a/_posts/Algorithm/2022-01-28-(C언어)가우스 조르단 소거법.md
+++ b/_posts/Algorithm/2022-01-28-(C언어)가우스 조르단 소거법.md
@@ -1,5 +1,5 @@
 ---
-title:  "[C언어]가우스 조르단 소거법 알고리즘"
+title:  "[C]가우스 조르단 소거법 알고리즘"
 categories : Algorithm
 tag : [Gauss-Jordan Elimination, 선형대수학, 연립일차방정식, 삼각화]
 toc: true
