모던자스예제 포스팅(수정필요)

--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제03.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제03.md
@@ -1,4 +1,13 @@
-title : 03장 자바스크립트 개발 환경과 실행 방법
+---
+title:  "03장 자바스크립트 개발 환경과 실행 방법"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 **3.1 자바스크립트 실행 환경
 3.2 웹 브라우저
