--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제04.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제04.md
@@ -1,4 +1,13 @@
-title : 4장 변수
+---
+title:  "04장 변수"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 **4.1 변수란 무엇인가? 왜 필요한가?
 4.2 식별자
