--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제04.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제04.md
@@ -17,7 +17,7 @@ sidebar:
 4.6 값의 재할당
 4.7 식별자 네이밍 규칙**
 
-## 04-01
+## 4.1 변수란 무엇인가? 왜 필요한가?(04-01)
 
 * 변수는 메모리 공간을 식별하기 위해 붙힌 이름(값의 위치를 가리킴)
 
@@ -29,7 +29,7 @@ sidebar:
 // + : 연산자
 ```
 
-## 04-02
+### 04-02
 
 * 변수에 여러 개의 값을 저장하는 방법
 
@@ -47,7 +47,7 @@ var users = [
 ];
 ```
 
-## 04-03
+### 04-03
 
 * 값 30이 저장된 메모리 공간을 result(변수)로 이름 붙인 것이다.
 
@@ -57,7 +57,13 @@ var users = [
 var result = 10 + 20;
 ```
 
-## 04-04
+## 4.2 식별자
+
+* 변수 이름
+
+* 식별자는 어떤 값을 구별해서 식별할 수 있는 고유한 이름을 의미
+
+## 4.3 변수 선언(04-04)
 
 * 선언에 의해 자바스크립트 엔진에 식별자의 존재를 알림
 
@@ -73,7 +79,7 @@ var result = 10 + 20;
 var score; // 변수 선언(변수 선언문)
 ```
 
-## 04-05
+## 4.4 변수 선언의 실행 시점과 변수 호이스팅(04-05)
 
 * 변수 호이스팅(변수 선언문이 코드의 선두로 끌어 올려진 것처럼 동작)
 
@@ -87,7 +93,7 @@ console.log(score); // undefined
 var score; // 변수 선언문
 ```
 
-## 04-06
+## 4.5 값의 할당(04-06)
 
 * 변수에 값을 할당하는 법
 
@@ -96,7 +102,7 @@ var score;  // 변수 선언
 score = 80; // 값의 할당
 ```
 
-## 04-07
+### 04-07
 
 * 변수 선언과 값의 할당을 동시에(어차피 선언과 할당 나눠서 처리)
 
@@ -104,7 +110,7 @@ score = 80; // 값의 할당
 var score = 80; // 변수 선언과 값의 할당
 ```
 
-## 04-08
+### 04-08
 
 * undefined로 초기화 먼저하기 때문에 값을 재할당 한다는 예
 
@@ -117,7 +123,7 @@ score = 80; // ② 값의 할당
 console.log(score); // 80
 ```
 
-## 04-09
+### 04-09
 
 * 위의 예제를 선언, 할당 한줄로
 
@@ -129,7 +135,7 @@ var score = 80;     // 변수 선언과 값의 할당
 console.log(score); // 80
 ```
 
-## 04-10
+### 04-10
 
 * 답은 80입니다
 
@@ -142,7 +148,7 @@ var score;  // 변수 선언
 console.log(score); // ??
 ```
 
-## 04-11
+## 4.6 값의 재할당(04-11)
 
 * 사실은 처음 변수에 값 할당하는것도 재할당이다, 그리고 재할당은 기존 메모리 공간이 아니라 새로운 메모리 공간을 확보하고 그 공간에 숫자 값 90을 저장하는 것이다.(기존 메모리 공간은 gc가 알아서 제거)
 
@@ -153,7 +159,7 @@ var score = 80; // 변수 선언과 값의 할당
 score = 90;     // 값의 재할당
 ```
 
-## 04-12
+## 4.7 식별자 네이밍 규칙(04-12)
 
 * , 구문으로 여러개 변수 한번에 선언(가독성은 다운)
 
@@ -161,7 +167,7 @@ score = 90;     // 값의 재할당
 var person, $elem, _name, first_name, val1;
 ```
 
-## 04-13
+### 04-13
 
 * 유니코드 문자도 식별자 허용(ES5부터)
 
@@ -169,7 +175,7 @@ var person, $elem, _name, first_name, val1;
 var 이름, なまえ;
 ```
 
-## 04-14
+### 04-14
 
 * 명명 규칙 위배
 
@@ -179,7 +185,7 @@ var 1st;        // SyntaxError: Invalid or unexpected token
 var this;       // SyntaxError: Unexpected token this
 ```
 
-## 04-15
+### 04-15
 
 * 대소문자 구별하므로 전부 다른 변수
 
@@ -189,7 +195,7 @@ var firstName;
 var FIRSTNAME;
 ```
 
-## 04-16
+### 04-16
 
 * 가독성을 높이기 위해 이름 지정 잘 할것
 
@@ -198,7 +204,7 @@ var x = 3;       // NG. x 변수가 의미하는 바를 알 수 없다.
 var score = 100; // OK. score 변수는 점수를 의미한다.
 ```
 
-## 04-17
+### 04-17
 
 * 변수 선언에 주석이 필요하다면 네이밍을 제대로 안한것.
 
@@ -209,7 +215,7 @@ var d;                 // NG
 var elapsedTimeInDays; // OK
 ```
 
-## 04-18
+### 04-18
 
 * 4가지 유형의 네이밍 컨벤션이 자주 사용
 
