최종 모던자스예제정리

--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제18.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제18.md
@@ -1,17 +1,13 @@
-title : 함수와 일급 객체
-
-
-
-**18.1 일급 객체**
-**18.2 함수 객체의 프로퍼티**
-
-* **18.2.1 arguments 프로퍼티**
-  **18.2.2 caller 프로퍼티**
-  **18.2.3 length 프로퍼티**
-  **18.2.4 name 프로퍼티**
-  **18.2.5 \_\_proto\_\_ 접근자 프로퍼티**
-  **18.2.6 prototype 프로퍼티**
-
+---
+title:  "18장 함수와 일급 객체"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 
 ## 18.1 일급 객체(18-01)
