--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제28.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제28.md
@@ -1,31 +1,13 @@
-title : Number
-
-
-
-**28.1 Number 생성자 함수**
-**28.2 Number 프로퍼티**
-
-- **28.2.1 Number.EPSILON**
-- **28.2.2 Number.MAX_VALUE**
-- **28.2.3 Number.MIN_VALUE**
-- **28.2.4 Number.MAX_SAFE_INTEGER**
-- **28.2.5 Number.MIN_SAFE_INTEGER**
-- **28.2.6 Number.POSITIVE_INFINITY**
-- **28.2.7 Number.NEGATIVE_INFINITY**
-- **28.2.8 Number.NaN**
-
-**28.3 Number 메서드**
-
-- **28.3.1 Number.isFinite**
-- **28.3.2 Number.isInteger**
-- **28.3.3 Number.isNaN**
-- **28.3.4 Number.isSafeInteger**
-- **28.3.5 Number.prototype.toExponential**
-- **28.3.6 Number.prototype.toFixed**
-- **28.3.7 Number.prototype.toPrecision**
-- **28.3.8 Number.prototype.toString**
-
-
+---
+title:  "28장 Number"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 28.1 Number 생성자 함수(28-01)
 
