--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제29.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제29.md
@@ -1,25 +1,13 @@
-title : Math
-
-
-
-**29.1 Math 프로퍼티**
-
-- **29.1.1 Math.PI**
-
-**29.2 Math 메서드**
-
-- **29.2.1 Math.abs**
-- **29.2.2 Math.round**
-- **29.2.3 Math.ceil**
-- **29.2.4 Math.floor**
-- **29.2.5 Math.sqrt**
-- **29.2.6 Math.random**
-- **29.2.7 Math.pow**
-- **29.2.8 Math.max**
-- **29.2.9 Math.min**
-
-
-
+---
+title:  "29장 Math"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 29.1 Math 프로퍼티
 
