--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제31.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제31.md
@@ -1,39 +1,13 @@
-title : RegExp
-
-
-
-**31.1 정규 표현식이란?**
-**31.2 정규 표현식의 생성**
-**31.3 RegExp 메서드**
-
-- **31.3.1 RegExp.prototype.exec**
-- **31.3.2 RegExp.prototype.test**
-- **31.3.3 String.prototype.match**
-
-**31.4 플래그**
-**31.5 패턴**
-
-- **31.5.1 문자열 검색**
-- **31.5.2 임의의 문자열 검색**
-- **31.5.3 반복 검색**
-- **31.5.4 OR 검색**
-- **31.5.5 NOT 검색**
-- **31.5.6 시작 위치로 검색**
-- **31.5.7 마지막 위치로 검색**
-
-**31.6 자주 사용하는 정규표현식**
-
-- **31.6.1 특정 단어로 시작하는지 검사**
-- **31.6.2 특정 단어로 끝나는지 검사**
-- **31.6.3 숫자로만 이루어진 문자열인지 검사**
-- **31.6.4 하나 이상의 공백으로 시작하는지 검사**
-- **31.6.5 아이디로 사용 가능한지 검사**
-- **31.6.6 메일 주소 형식에 맞는지 검사**
-- **31.6.7 핸드폰 번호 형식에 맞는지 검사**
-- **31.6.8 특수 문자 포함 여부 검사**
-
-
-
+---
+title:  "31장 RegExp"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 31.1 정규 표현식이란?(31-01)
 
