--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제32.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제32.md
@@ -1,29 +1,13 @@
-title : String
-
-
-
-**32.1 String 생성자 함수**
-**32.2 length 프로퍼티**
-**32.3 String 메서드**
-
-- **32.3.1 String.prototype.indexOf**
-- **32.3.2 String.prototype.search**
-- **32.3.3 String.prototype.includes**
-- **32.3.4 String.prototype.startsWith**
-- **32.3.5 String.prototype.endsWith**
-- **32.3.6 String.prototype.charAt**
-- **32.3.7 String.prototype.substring**
-- **32.3.8 String.prototype.slice**
-- **32.3.9 String.prototype.toUpperCase**
-- **32.3.10 String.prototype.toLowerCase**
-- **32.3.11 String.prototype.trim**
-- **32.3.12 String.prototype.repeat**
-- **32.3.13 String.prototype.replace**
-- **32.3.14 String.prototype.split**
-
-
-
-
+---
+title:  "32장 String"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 32.1 String 생성자 함수(32-01)
 
