--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제33.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제33.md
@@ -1,19 +1,13 @@
-title : 7번째 데이터 타입 Symbol
-
-
-
-**33.1 심벌이란?**
-**33.2 심벌 값의 생성**
-
-- **33.2.1 Symbol 함수**
-- **33.2.2 Symbol.for / Symbol.keyFor 메서드**
-
-**33.3 심벌과 상수**
-**33.4 심벌과 프로퍼티 키**
-**33.5 심벌과 프로퍼티 은닉**
-**33.6 심벌과 표준 빌트인 객체 확장**
-**33.7 Well-known Symbol**
-
+---
+title: "33장 7번째 데이터 타입 Symbol"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 
 ## 33.1 심벌이란?
