--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제34.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제34.md
@@ -1,24 +1,13 @@
-title : 이터러블
-
-
-
-**34.1 이터레이션 프로토콜**
-
-- **34.1.1 이터러블**
-- **34.1.2 이터레이터**
-
-**34.2 빌트인 이터러블**
-**34.3 for...of 문**
-**34.4 이터러블과 유사 배열 객체**
-**34.5 이터레이션 프로토콜의 필요성**
-**34.6 사용자 정의 이터러블**
-
-- **34.6.1 사용자 정의 이터러블 구현**
-- **34.6.2 이터러블을 생성하는 함수**
-- **34.6.3 이터러블이면서 이터레이터인 객체를 생성하는 함수**
-- **34.6.4 무한 이터러블과 지연 평가**
-
-
+---
+title: "34장 이터러블"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 34.1 이터레이션 프로토콜
 
