--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제35.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제35.md
@@ -1,18 +1,13 @@
-title : 스프레드 문법
-
-
-
-**35.1 함수 호출문의 인수 목록에서 사용하는 경우**
-**35.2 배열 리터럴 내부에서 사용하는 경우**
-
-- **35.2.1 concat**
-- **35.2.2 splice**
-- **35.2.3 배열 복사**
-- **35.2.4 이터러블을 배열로 변환**
-
-**35.3 객체 리터럴 내부에서 사용하는 경우**
-
-
+---
+title: "35장 스프레드 문법"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 35 스프레드 문법(35-01)
 
