--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제36.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제36.md
@@ -1,11 +1,13 @@
-title : 디스트럭처링 할당
-
-
-
-**36.1 배열 디스트럭처링 할당**
-**36.2 객체 디스트럭처링 할당**
-
-
+---
+title: "36장 디스트럭처링 할당"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 36.1 배열 디스트럭처링 할당(36-01)
 
