--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제37.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제37.md
@@ -1,31 +1,13 @@
-title : Set과 Map
-
-
-
-**37.1 Set**
-
-- **37.1.1 Set 객체의 생성**
-- **37.1.2 요소 개수 확인**
-- **37.1.3 요소 추가**
-- **37.1.4 요소 존재 여부 확인**
-- **37.1.5 요소 삭제**
-- **37.1.6 요소 일괄 삭제**
-- **37.1.7 요소 순회**
-- **37.1.8 집합 연산**
-
-**37.2 Map**
-
-- **37.2.1 Map 객체의 생성**
-- **37.2.2 요소 개수 확인**
-- **37.2.3 요소 추가**
-- **37.2.4 요소 취득**
-- **37.2.5 요소 존재 여부 확인**
-- **37.2.6 요소 삭제**
-- **37.2.7 요소 일괄 삭제**
-- **37.2.8 요소 순회**
-
-
-
+---
+title: "37장 Set과 Map"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 37.1 Set
 
