--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제41.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제41.md
@@ -1,20 +1,13 @@
-title : 타이머
-
-
-
-**41.1 호출 스케줄링**
-**41.2 타이머 함수**
-
-- **41.2.1 setTimeout / clearTimeout**
-- **41.2.2 setInterval / clearInterval**
-
-**41.3 디바운스와 스로틀**
-
-- **41.3.1 디바운스**
-- **41.3.2 스로틀**
-
-
-
+---
+title: "41장 타이머"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 41.1 호출 스케줄링
 
