--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제42.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제42.md
@@ -1,13 +1,13 @@
-title : 비동기 프로그래밍
-
-
-
-**42.1 동기 처리와 비동기 처리**
-**42.2 이벤트 루프와 태스크 큐**
-
-
-
-
+---
+title: "42장 비동기 프로그래밍"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 42.1 동기 처리와 비동기 처리(42-01)
 
