--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제43.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제43.md
@@ -1,22 +1,13 @@
-title : Ajax
-
-
-
-**43.1 Ajax란?**
-**43.2 JSON**
-
-- **43.2.1 JSON 표기 방식**
-- **43.2.2 JSON.stringify**
-- **43.2.3 JSON.parse**
-
-**43.3 XMLHttpRequest**
-
-- **43.3.1 XMLHttpRequest 객체 생성**
-- **43.3.2 XMLHttpRequest 객체의 프로퍼티와 메서드**
-- **43.3.3 HTTP 요청 전송**
-- **43.3.4 HTTP 응답 처리**
-
-
+---
+title: "43장 Ajax"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 43.1 Ajax란?
 
