--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제45.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제45.md
@@ -1,31 +1,13 @@
-title : 프로미스
-
-
-
-**45.1 비동기 처리를 위한 콜백 패턴의 단점**
-
-- **45.1.1 콜백 헬**
-- **45.1.2 에러 처리의 한계**
-
-**45.2 프로미스의 생성**
-**45.3 프로미스의 후속 처리 메서드**
-
-- **45.3.1 Promise.prototype.then**
-- **45.3.2 Promise.prototype.catch**
-- **45.3.3 Promise.prototype.finally**
-
-**45.4 프로미스의 에러 처리**
-**45.5 프로미스 체이닝**
-**45.6 프로미스의 정적 메서드**
-
-- **45.6.1 Promise.resolve / Promise.reject**
-- **45.6.2 Promise.all**
-- **45.6.3 Promise.race**
-- **45.6.4 Promise.allSettled**
-
-**45.7 마이크로태스크 큐**
-**45.8 fetch**
-
+---
+title: "45장 프로미스"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 45.1 비동기 처리를 위한 콜백 패턴의 단점
 
