--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제46.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제46.md
@@ -1,22 +1,13 @@
-title : 제너레이터와 async/await
-
-
-
-**46.1 제너레이터란?**
-**46.2 제너레이터 함수의 정의**
-**46.3 제너레이터 객체**
-**46.4 제너레이터의 일시 중지와 재개**
-**46.5 제너레이터의 활용**
-
-- **46.5.1 이터러블의 구현**
-- **46.5.2 비동기 처리**
-
-**46.6 async/await**
-
-- **46.6.1 async 함수**
-- **46.6.2 await 키워드**
-- **46.6.3 에러 처리**
-
+---
+title: "46장 제너레이터와 async/await"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 
 ## 46.1 제너레이터란?
