--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제47.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제47.md
@@ -1,16 +1,13 @@
-title : 에러 처리
-
-
-
-**47.1 에러 처리의 필요성**
-**47.2 try...catch...finally 문**
-**47.3 Error 객체**
-**47.4 throw 문**
-**47.5 에러의 전파**
-
-
-
-
+---
+title: "47장 에러 처리"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 47.1 에러 처리의 필요성(47-01)
 
