--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제48.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제48.md
@@ -1,16 +1,13 @@
-title : 모듈
-
-
-
-**48.1 모듈의 일반적 의미**
-**48.2 자바스크립트와 모듈**
-**48.3 ES6 모듈(ESM)**
-
-- **48.3.1 모듈 스코프**
-- **48.3.2 export 키워드**
-- **48.3.3 import 키워드**
-
-
+---
+title: "48장 모듈"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 48.1 모듈의 일반적 의미
 
