--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제49.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제49.md
@@ -1,24 +1,15 @@
-title : Babel과 Webpack을 이용한 ES6+/ES.NEXT 개발 환경 구축
+---
+title: "49장 Babel과 Webpack을 이용한 ES6+/ES.NEXT 개발 환경 구축"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
-
-
-**49.1 Babel**
-
-- **49.1.1 Babel 설치**
-- **49.1.2 Babel 프리셋 설치와 babel.config.json 설정 파일 작성**
-- **49.1.3 트랜스파일링**
-- **49.1.4 Babel 플러그인 설치**
-- **49.1.5 브라우저에서 모듈 로딩 테스트**
-
-**49.2 Webpack**
-
-- **49.2.1 Webpack 설치**
-- **49.2.2 babel-loader 설치**
-- **49.2.3 webpack.config.js 설정 파일 작성**
-- **49.2.4 babel-polyfill 설치**
-
-# 아 이번장은 설치하는거라 대충 넘기는데, 블로그에 올릴때나 슥 보고, 수정하던가하자. 수정하기 싫으면 걍올리자. 어차피 책보고 설치해야해서그럼. 시간이 많으면 쭉 설치법 다적던지 ㅇㅇ
-
+* 이번장은 설치가 많아서 자세하게는 작성하지 않는다
 
 ## 49.0 Babel과 Webpack을 이용한 ES6+/ES.NEXT 개발 환경 구축
 
