--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제06.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제06.md
@@ -1,16 +1,13 @@
-title : 데이터 타입
-
-**6.1 숫자 타입
-6.2 문자열 타입
-6.3 템플릿 리터럴
-6.3.1 멀티라인 문자열
-6.3.2 표현식 삽입
-6.4 불리언 타입
-6.5 undefined 타입
-6.6 null 타입
-6.7 심벌 타입
-6.8 객체 타입
-6.9 데이터 타입의 필요성**
+---
+title:  "06장 데이터 타입"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 * **6.9.1 데이터 타입에 의한 메모리 공간의 확보와 참조
 6.9.2 데이터 타입에 의한 값의 해석**
