--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제08.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제08.md
@@ -1,20 +1,13 @@
-title : 제어문
-
-
-**8.1 블록문**
-**8.2 조건문**
-
-* **8.2.1 if ... else 문**
-  **8.2.2 switch 문**
-
-**8.3 반복문**
-
-* **8.3.1 for 문**
-  **8.3.2 while 문**
-  **8.3.3 do ... while 문**
-
-**8.4 break 문**
-**8.5 continue 문**
+---
+title:  "08장 제어문"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 8.1 블록문(08-01)
 
