--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제09.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제09.md
@@ -1,26 +1,13 @@
-title : 타입 변환과 단축 평가
-
-
-
-**9.1 타입 변환이란?**
-**9.2 암묵적 타입 변환**
-
-* **9.2.1 문자열 타입으로 변환**
-  **9.2.2 숫자 타입으로 변환**
-  **9.2.3 불리언 타입으로 변환**
-
-**9.3 명시적 타입 변환**
-
-* **9.3.1 문자열 타입으로 변환**
-  **9.3.2 숫자 타입으로 변환**
-  **9.3.3 불리언 타입으로 변환**
-
-**9.4 단축 평가**
-
-* **9.4.1 논리 연산자를 사용한 단축 평가**
-  **9.4.2 옵셔널 체이닝 연산자**
-  **9.4.3 null 병합 연산자**
-
+---
+title:  "09장 타입 변환과 단축 평가"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 
 ## 9.1 타입 변환이란?(09-01)
