--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제10.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제10.md
@@ -1,21 +1,13 @@
-title : 객체 리터럴
-
-
-
-**10.1 객체란?**
-**10.2 객체 리터럴에 의한 객체 생성**
-**10.3 프로퍼티**
-**10.4 메서드**
-**10.5 프로퍼티 접근**
-**10.6 프로퍼티 값 갱신**
-**10.7 프로퍼티 동적 생성**
-**10.8 프로퍼티 삭제**
-**10.9 ES6에서 추가된 객체 리터럴의 확장 기능**
-
-* **10.9.1 프로퍼티 축약 표현**
-  **10.9.2 계산된 프로퍼티 이름**
-  **10.9.3 메서드 축약 표현**
-
+---
+title:  "10장 객체 리터럴"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 10.1 객체란?
 
