--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제11.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제11.md
@@ -1,18 +1,13 @@
-title : 원시 값과 객체의 비교
-
-
-
-**11.1 원시값**
-
-* **11.1.1 변경 불가능한 값**
-  **11.1.2 문자열과 불변성**
-  **11.1.3 값에 의한 전달**
-
-**11.2 객체**
-
-* **11.2.1 변경 가능한 값**
-  **11.2.2 참조에 의한 전달**
-
+---
+title:  "11장 원시 값과 객체의 비교"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 11.1 원시값
 
