--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제13.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제13.md
@@ -1,22 +1,13 @@
-title : 스코프
-
-
-
-**13.1 스코프란?**
-**13.2 스코프의 종류**
-
-* **13.2.1 전역과 전역 스코프**
-  **13.2.2 지역과 지역 스코프**
-
-**13.3 스코프 체인**
-
-* **13.3.1 스코프 체인에 의한 변수 검색**
-  **13.3.2 스코프 체인에 의한 함수 검색**
-
-**13.4 함수 레벨 스코프**
-**13.5 렉시컬 스코프**
-
-
+---
+title:  "13장 스코프"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 13.1 스코프란?(13-01)
 
