--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제14.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제14.md
@@ -1,19 +1,13 @@
-title : 전역 변수의 문제점
-
-
-
-**14.1 변수의 생명 주기**
-
-* **14.1.1 지역 변수의 생명 주기**
-  **14.1.2 전역 변수의 생명 주기**
-
-**14.2 전역 변수의 문제점**
-**14.3 전역 변수의 사용을 억제하는 방법**
-
-* **14.3.1 즉시 실행 함수**
-  **14.3.2 네임스페이스 객체**
-  **14.3.3 모듈 패턴**
-  **14.3.4 ES6 모듈**
+---
+title:  "14장 전역 변수의 문제점"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 14.1 변수의 생명 주기
 
