--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제17.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제17.md
@@ -1,20 +1,13 @@
-title : 생성자 함수에 의한 객체 생성
-
-
-
-**17.1 Object 생성자 함수**
-**17.2 생성자 함수**
-
-* **17.2.1 객체 리터럴에 의한 객체 생성 방식의 문제점**
-  **17.2.2 생성자 함수에 의한 객체 생성 방식의 장점**
-  **17.2.3 생성자 함수의 인스턴스 생성 과정**
-  **17.2.4 내부 메서드 [[Call]]과 [[Construct]]**
-  **17.2.5 constructor와 non-constructor의 구분**
-  **17.2.6 new 연산자**
-  **17.2.7 new.target**
-
-
-
+---
+title:  "17장 생성자 함수에 의한 객체 생성"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 
 ## 17.1 Object 생성자 함수(17-01)
