--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제21.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제21.md
@@ -1,17 +1,13 @@
-title : 빌트인 객체
-
-
-
-**21.1 자바스크립트 객체의 분류**
-**21.2 표준 빌트인 객체**
-**21.3 원시값과 래퍼 객체**
-**21.4 전역 객체**
-
-* **21.4.1 빌트인 전역 프로퍼티**
-  **21.4.2 빌트인 전역 함수**
-  **21.4.3 암묵적 전역**
-
-
+---
+title:  "21장 빌트인 객체"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 21.1 자바스크립트 객체의 분류
 
