--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제22.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제22.md
@@ -1,18 +1,13 @@
-title : this
-
-
-
-**22.1 this 키워드**
-**22.2 함수 호출 방식과 this 바인딩**
-
-* **22.2.1 일반 함수 호출**
-  **22.2.2 메서드 호출**
-  **22.2.3 생성자 함수 호출**
-  **22.2.4 Function.prototype.apply/call/bind 메서드에 의한 간접 호출**
-
-
-
-
+---
+title:  "22장 this"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 22.1 this 키워드(22-01)
 
