--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제23.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제23.md
@@ -1,29 +1,13 @@
-title : 실행 컨텍스트
-
-
-
-**23.1 소스코드의 타입**
-**23.2 소스코드의 평가와 실행**
-**23.3 실행 컨텍스트의 역할**
-**23.4 실행 컨텍스트 스택**
-**23.5 렉시컬 환경**
-**23.6 실행 컨텍스트의 생성과 식별자 검색 과정**
-
-* **23.6.1 전역 객체 생성**
-  **23.6.2 전역 코드 평가**
-  **23.6.3 전역 코드 실행**
-  **23.6.4 foo 함수 코드 평가**
-  **23.6.5 foo 함수 코드 실행**
-  **23.6.6 bar 함수 코드 평가**
-  **23.6.7 bar 함수 코드 실행**
-  **23.6.8 bar 함수 코드 실행 종료**
-  **23.6.9 foo 함수 코드 실행 종료**
-  **23.6.10 전역 코드 실행 종료**
-
-**23.7 실행 컨텍스트와 블록 레벨 스코프**
-
-
-
+---
+title:  "23장 실행 컨텍스트"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 23.1 소스코드의 타입
 
