--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제24.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제24.md
@@ -1,14 +1,13 @@
-title : 클로저
-
-
-
-**24.1 렉시컬 스코프**
-**24.2 함수 객체의 내부 슬롯 [[Environment]]**
-**24.3 클로저와 렉시컬 환경**
-**24.4 클로저의 활용**
-**24.5 캡슐화와 정보 은닉**
-**24.6 자주 발생하는 실수**
-
+---
+title:  "24장 클로저"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 클로저
 
