--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제26.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제26.md
@@ -1,25 +1,13 @@
-title : ES6 함수의 추가 기능
-
-
-
-**26.1 함수의 구분**
-**26.2 메서드**
-**26.3 화살표 함수**
-
-* **26.3.1 화살표 함수 정의**
-  **26.3.2 화살표 함수와 일반 함수의 차이**
-  **26.3.3 this**
-  **26.3.4 super**
-  **26.3.5 arguments**
-
-**26.4 Rest 파라미터**
-
-* **26.4.1 기본 문법**
-  **26.4.2 Rest 파라미터와 arguments 객체**
-
-**26.5 매개변수 기본값**
-
-
+---
+title:  "26장 ES6 함수의 추가 기능"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 26.1 함수의 구분(26-01)
 
