--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제30.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제30.md
@@ -1,46 +1,13 @@
-title : Date
-
-
-
-**30.1 Date 생성자 함수**
-
-- **30.1.1 new Date()**
-- **30.1.2 new Date(milliseconds)**
-- **30.1.3 new Date(dateString)**
-- **30.1.4 new Date(year, month, day, hour, minute, second, millisecond])**
-
-**30.2 Date 메서드**
-
-- **30.2.1 Date.now**
-- **30.2.2 Date.parse**
-- **30.2.3 Date.UTC**
-- **30.2.4 Date.prototype.getFullYear**
-- **30.2.5 Date.prototype.setFullYear**
-- **30.2.6 Date.prototype.getMonth**
-- **30.2.7 Date.prototype.setMonth**
-- **30.2.8 Date.prototype.getDate**
-- **30.2.9 Date.prototype.setDate**
-- **30.2.10 Date.prototype.getDay**
-- **30.2.11 Date.prototype.getHours**
-- **30.2.12 Date.prototype.setHours**
-- **30.2.13 Date.prototype.getMinutes**
-- **30.2.14 Date.prototype.setMinutes**
-- **30.2.15 Date.prototype.getSeconds**
-- **30.2.16 Date.prototype.setSeconds**
-- **30.2.17 Date.prototype.getMilliseconds**
-- **30.2.18 Date.prototype.setMilliseconds**
-- **30.2.19 Date.prototype.getTime**
-- **30.2.20 Date.prototype.setTime**
-- **30.2.21 Date.prototype.getTimezoneOffset**
-- **30.2.22 Date.prototype.toDateString**
-- **30.2.23 Date.prototype.toTimeString**
-- **30.2.24 Date.prototype.toISOString**
-- **30.2.25 Date.prototype.toLocaleString**
-- **30.2.26 Date.prototype.toLocaleTimeString**
-
-**30.3 Date를 활용한 시계 예제**
-
-
+---
+title:  "30장 Date"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 30.1 Date 생성자 함수
 
