--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제39.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제39.md
@@ -1,64 +1,13 @@
-title : DOM
-
-
-
-**39.1 노드**
-
-- **39.1.1 HTML 요소와 노드 객체**
-- **39.1.2 노드 객체의 타입**
-- **39.1.3 노드 객체의 상속 구조**
-
-**39.2 요소 노드 취득**
-
-- **39.2.1 id를 이용한 요소 노드 취득**
-- **39.2.2 태그 이름을 이용한 요소 노드 취득**
-- **39.2.3 class를 이용한 요소 노드 취득**
-- **39.2.4 CSS 선택자를 이용한 요소 노드 취득**
-- **39.2.5 특정 요소 노드를 취득할 수 있는지 확인**
-- **39.2.6 HTMLCollection과 NodeList**
-
-**39.3 노드 탐색**
-
-- **39.3.1 공백 텍스트 노드**
-- **39.3.2 자식 노드 탐색**
-- **39.3.3 자식 노드 존재 확인**
-- **39.3.4 요소 노드의 텍스트 노드 탐색**
-- **39.3.5 부모 노드 탐색**
-- **39.3.6 형제 노드 탐색**
-
-**39.4 노드 정보 취득**
-**39.5 요소 노드의 텍스트 조작**
-
-- **39.5.1 nodeValue**
-- **39.5.2 textContent**
-
-**39.6 DOM 조작**
-
-- **39.6.1 innerHTML**
-- **39.6.2 insertAdjacentHTML 메서드**
-- **39.6.3 노드 생성과 추가**
-- **39.6.4 복수의 노드 생성과 추가**
-- **39.6.5 노드 삽입**
-- **39.6.6 노드 이동**
-- **39.6.7 노드 복사**
-- **39.6.8 노드 교체**
-- **39.6.9 노드 삭제**
-
-**39.7 어트리뷰트**
-
-- **39.7.1 어트리뷰트 노드와 attributes 프로퍼티**
-- **39.7.2 HTML 어트리뷰트 조작**
-- **39.7.3 HTML 어트리뷰트 vs. DOM 프로퍼티**
-- **39.7.4 data 어트리뷰트와 dataset 프로퍼티**
-
-**39.8 스타일**
-
-- **39.8.1 인라인 스타일 조작**
-- **39.8.2 클래스 조작**
-- **39.8.3 요소에 적용되어 있는 CSS 스타일 참조**
-
-**39.9 DOM 표준**
-
+---
+title: "39장 DOM"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 39.1 노드
 
