--- a/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제44.md
+++ b/_posts/JavaScript/모던_자바스크립트_Deep_Dive/2022-05-10-(JS)예제44.md
@@ -1,20 +1,13 @@
-title : REST API
-
-
-
-**44.1 REST API의 구성**
-**44.2 REST API 설계 원칙**
-**44.3 JSON Server를 이용한 REST API 실습**
-
-- **44.3.1 JSON Server 설치**
-- **44.3.2 db.json 파일 생성**
-- **44.3.3 JSON Server 실행**
-- **44.3.4 GET 요청**
-- **44.3.5 POST 요청**
-- **44.3.6 PUT 요청**
-- **44.3.7 PATCH 요청**
-- **44.3.8 DELETE 요청**
-
+---
+title: "44장 REST API"
+categories : Modern_JavaScript_Deep_Dive
+tag : [JavaScript, 모던 자바스크립트 Deep Dive]
+toc: true
+toc_sticky: true
+author_profile: false
+sidebar:
+  nav: "docs"
+---
 
 ## 44.1 REST API의 구성
 
