--- a/_posts/Major/Programming_Language/2022-01-25-언어차이 정리(수정전).md
+++ b/_posts/Major/Programming_Language/2022-01-25-언어차이 정리(수정전).md
@@ -1,6 +1,6 @@
 ---
 title:  "[수정필요]언어 차이점 정리_수정필요함"
-categories : [DifferenceLang, Revise]
+categories : [Programming_Language, Revise]
 tag : [language, java, c, c++, python]
 toc: true
 toc_sticky: true
