--- a/_posts/Major/Programming_Language/2022-06-21-PL.md
+++ b/_posts/Major/Programming_Language/2022-06-21-PL.md
@@ -61,19 +61,19 @@ int x; 에서 이 자료형의 의미 : 값 + 연산을 의미
 
 #### 1. C의 자료형(기본형, 파생형으로 나뉨)
 
-\- 정수형은 아스키코드값이 저장. 무치형은 값이 없다는 것. 아스키코드(한바이트)는 문자만 표현,
+* **정수형**은 아스키코드 값이 저장. **무치형**은 값이 없다는 것. **아스키코드**(1byte=8bit)는 문자만 표현
 
-\- 구조체는 멤버변수가 각각의 메모리 공간을 할당받고 있음.
+* 구조체는 멤버변수가 **각각의** 메모리 공간을 할당받고 있음
 
-\- 공용체는 같은 메모리공간을 모든 변수가 공유하는 형태
+* **공용체**는 같은 메모리공간을 모든 변수가 공유하는 형태
 
-\- C에선 boolean형타입 없고, 0이면 false, 1이면 true 이런식임.
+* C에선 **boolean**형 타입 없고, 0이면 false, 1이면 true 이런식임
 
 #### 2. Java의 자료형(기본형, 참조형으로 나뉨)
 
-\- 유니코드는 한글도 표현. boolean형타입도 존재
+* **유니코드**는 더 커서 한글도 표현. **boolean**형 타입도 존재
 
-참조 자료형을 보면 C에서 포인터와 같은 것 같지만 포인터는 연산이 가능해서 메모리에서 직접 값을 변경할 수 있지만 참조 자료형은 불가.
+* **참조 자료형**을 보면 C에서 포인터와 같은 것 같지만 포인터는 연산이 가능해서 메모리에서 직접 값을 변경할 수 있지만 참조 자료형은 불가. 그래서 메모리 해제도 GC가 동작하는 것(가비지 컬렉션)
 
 <br>
 
