이미지 상대경로로 지정

--- a/_posts/Coding_Test/Algorithm/2022-01-28-(C언어)가우스 조르단 소거법.md
+++ b/_posts/Coding_Test/Algorithm/2022-01-28-(C언어)가우스 조르단 소거법.md
@@ -231,4 +231,4 @@ int main(void) {
 
 ## 실행화면
 
-![실행화면](https://bh946.github.io/images/2022-01-28-(C언어)가우스 조르단 소거법/Gauss_Jordan_Run.png)
+![실행화면](../../../images/2022-01-28-(C언어)가우스 조르단 소거법/Gauss_Jordan_Run.png)
