--- a/_posts/JavaScript/React(리액트_라이브러리)/2022-06-28-(JS)React기초.md
+++ b/_posts/JavaScript/React(리액트_라이브러리)/2022-06-28-(JS)React기초.md
@@ -1,14 +1,14 @@
 ---
-title:  "[React]"
-categories : ??
+title:  "[React]?"
+categories : React_JS
 tag : [JavaScript, 리액트, React]
 toc: true
 toc_sticky: true
 author_profile: false
 sidebar:
   nav: "docs"
+typora-root-url: ../../..
 ---
 
 
 
-## 크로스 브라우징
