--- a/_posts/Knowledge/Knowledge/2022-06-28-크로스 브라우징,JS_웹 통신,Node.js,Package-lock.json.md
+++ b/_posts/Knowledge/Knowledge/2022-06-28-크로스 브라우징,JS_웹 통신,Node.js,Package-lock.json.md
@@ -1,7 +1,7 @@
 ---
-title:  "(React들어가기전)크로스 브라우징,JS_웹 통신,npm,yarn"
-categories : React_JS
-tag : [JavaScript, 리액트, React, http, 비동기 통신, Node]
+title:  "(React들어가기전)크로스 브라우징,JS_웹 통신,Node.js, Package-lock.json"
+categories : [React_JS, Knowledge]
+tag : [JavaScript, 리액트, React, http, 비동기 통신, Node, Package-lock.json]
 toc: true
 toc_sticky: true
 author_profile: false
@@ -130,6 +130,8 @@ typora-root-url: ../../..
 
 **빠른 생산에 유리, 큰 규모에는 적합하지 않음**
 
+<br>
+
 ## Node.js와 브라우저
 
 * **import와 require를 통해 모듈 불러오는 차이점 기억**
@@ -138,56 +140,31 @@ typora-root-url: ../../..
 
 <br>
 
-## Node.js 사용 매커니즘
+## Package-lock.json과 Package.json차이
 
-### 설치(윈도우 기준)
+### version range
 
-* [Node.js 홈페이지](https://nodejs.org/ko/download/)
+* **"express" : "~3.5.1" **처럼 사용하는 버전이 정확한게 아닌 이상, 이하로 나타낸 방식
+* **package.json** : version range방식 사용
+* **package-lock.json** : 기존 정확한 버전 방식 사용
 
-* 최신 버전은 기능이 불안정할 수 있으므로 LTS 버전 권장
 
-* NVM(버전매니저)를 통해 다른 버전의 Node.js를 쉽게 설치, 전환 가능
 
-* 설치한 노드 버전은 터미널에서 node -v 또는 npm -v로 확인
+### version range의 문제점
 
-### npm
+3.5.1 버전과 3.5.0 인 버전을 서로 사용해서 버전 문제로 코드가 돌아가지 않을 수 있다.  
+이는 **정확한 버전 방식을 사용해야할 필요성**을 가진다.
 
-* **Node.js 공식 패키지 매니저**
-* cmd에서 cd를 통해 원하는 폴더 접근 후 npm init 으로 npm설치
-  * npm init을 통해 방대하게 흩어져 있는(github) 자바스크립트 모듈들을 다운받아서 관리(package.json 생성)
-  * code . 입력 : VS코드 해당폴더 경로로 바로 실행
-  * mkdir 폴더명 : 폴더명으로 폴더 생성
 
-### package.json / node_modules
 
-* **npm 프로젝트에 대해 설정하는 명세서 / 의존 모듈 저장 폴더**
-* package.json에 의존성 설정하고, node_modules에 모듈들 실제 저장되는 것
+### version range의 문제점 해결
 
-![image-20220628194040629](/images/2022-06-28-크로스 브라우징,JS_웹 통신,npm,yarn,git/image-20220628194040629.png)
+**해결 방안이** **package-lock.json** 이다.
 
-### npm install, uninstall : 모듈 추가/제거
+package-lock.json이 있다면 npm install로 모듈을 설치할때 package.json이 아닌 package-lock.json을 이용해 설치하기 때문이다.
 
-![image-20220628194300068](/images/2022-06-28-크로스 브라우징,JS_웹 통신,npm,yarn,git/image-20220628194300068.png)
 
-### npm run, npm start : 실행
 
-* **npm 커스텀 명령어를 실행하는 명령어**
-* 터미널에 node index.js 입력이 기존 실행방식이였음
+### 문제있어도 version range를 쓰는 이유?
 
-![image-20220628194454503](/images/2022-06-28-크로스 브라우징,JS_웹 통신,npm,yarn,git/image-20220628194454503.png)
-
-<br>
-
-## yarn
-
-**페이스북에서 발표한 비공식 패키지 매니저**
-
-**npm을 사용하던 yarn을 사용하던 자유**
-
-[npm과 yarn 비교](https://dongmin-jang.medium.com/npm-vs-yarn-7b699c5d6034)
-
-![image-20220628194957977](/images/2022-06-28-크로스 브라우징,JS_웹 통신,npm,yarn,git/image-20220628194957977.png)
-
-![image-20220628195011378](/images/2022-06-28-크로스 브라우징,JS_웹 통신,npm,yarn,git/image-20220628195011378.png)
-
-<br>
+만약 package.json에 버전명을 정확히 입력한다면 아주 작은 버그 수정이 이루어질때마다 매번 버전 업그레이드를 package.json에서도 수정해야 하기 때문. 이를 version range를 사용해 수고를 덜고 있었던것이다.
