리액트 style 포스팅

--- a/_posts/JavaScript/React(리액트_라이브러리)/2022-07-01-React 컴포넌트 렌더링 최적화.md
+++ b/_posts/JavaScript/React(리액트_라이브러리)/2022-07-01-React 컴포넌트 렌더링 최적화.md
@@ -1,7 +1,7 @@
 ---
-title:  "[JSX]React로 스타일링"
+title:  "React 컴포넌트 렌더링 최적화"
 categories : React_JS
-tag : [JavaScript, 리액트, React, jsx, scss, sass, 스타일, emotion]
+tag : [JavaScript, 리액트, React, 생명주기, 컴포넌트]
 toc: true
 toc_sticky: true
 author_profile: false
@@ -10,4 +10,3 @@ sidebar:
 typora-root-url: ../../..
 ---
 
-dd
