--- a/_posts/JavaScript/React(리액트_라이브러리)/2022-07-01-React 컴포넌트 렌더링 최적화.md
+++ b/_posts/JavaScript/React(리액트_라이브러리)/2022-07-01-React 컴포넌트 렌더링 최적화.md
@@ -1,15 +1,14 @@
 ---
 title:  "React 컴포넌트 렌더링 최적화"
 categories : React_JS
-tag : [JavaScript, 리액트, React, 생명주기, 컴포넌트, 함수형 컴포넌트, 클래스형 컴포넌트, useEffect, useState, setState, 반복 렌더링, useMemo, useCallback, memo, 마운트와 언마운트, 재렌더(업데이트), Material UI, 재렌더와 리페인트 차이, 반복 렌더링, ..., Spread, const {}, const [], Destructuring]
+tag : [Javascript, 리액트, Material, mui, checkbox, 컴포넌트 생명주기, useEffect, useState, 마운트, 언마운트, 재렌더, 반복 렌더링, useMemo, useCallback, memo]
 toc: true
 toc_sticky: true
 author_profile: false
 sidebar:
   nav: "docs"
 typora-root-url: ../../..
----
-
+tag : [JavaScript, 리액트, React, 생명주기, 컴포넌트, 함수형 컴포넌트, 클래스형 컴포넌트, useEffect, useState, setState, 반복 렌더링, useMemo, useCallback, memo, 마운트와 언마운트, 재렌더(업데이트), Material UI, 재렌더와 리페인트 차이, 반복 렌더링, ..., Spread, const {}, const [], Destructuring]
 
 
 ## `Material UI` 라이브러리 `@mui/material` 설치
@@ -627,8 +626,3 @@ const FunctionCheckbox = memo(
 ```
 
 <br>
-
-## 정리된 최종 코드
-
-
-
