--- a/_posts/JavaScript/React(리액트_라이브러리)/2022-07-03-외부 API 호출한 것 React.js로 디자인까지.md
+++ b/_posts/JavaScript/React(리액트_라이브러리)/2022-07-03-외부 API 호출한 것 React.js로 디자인까지.md
@@ -11,12 +11,10 @@ typora-root-url: ../../..
 
 ---
 
-ㅁㅇㄹㄴ
 
 
+## 컴포넌트 스타일링
 
-아아 반드시 이건 직접 코드 작성하면서 꼭 꼭 연습연습 하면서
+### 디자인 초안확인
 
-이거 프로젝트 수행 할 것. 것. 것. 반 드 시 . . . .
-
-이왕이면 하고나서 깃에 올리는 것 도,, 추 천 . 처 ㄴ 천.
+![image-20220704164612149](/images/2022-07-03-외부 API 호출한 것 React.js로 디자인까지/image-20220704164612149.png)
