--- a/_posts/JavaScript/React(리액트_라이브러리)/2022-07-01-React 컴포넌트 렌더링 최적화.md
+++ b/_posts/JavaScript/React(리액트_라이브러리)/2022-07-01-React 컴포넌트 렌더링 최적화.md
@@ -33,11 +33,11 @@ yarn add @mui/material @emotion/react @emotion/styled
 
 ## 재렌더와 실제 **`DOM`**에 리페인트 되는 것은 다름
 
-\- 재 렌더는 `Virtual DOM`에 가해지는 행위로 실제 `DOM`에 반영되지 않더라도 내부적으로 `React`가 렌더 함수를 호출합니다.
+\- 재렌더(업데이트)는 `Virtual DOM`에 가해지는 행위로 실제 `DOM`에 반영되지 않더라도 내부적으로 `React`가 렌더 함수를 호출합니다.
 
 \- 렌더 함수가 실행되어도 이전 `DOM`과 `Virtual DOM`이 다르지 않으면 리페인트 하지 않습니다.
 
-\- 따라서 리페인트가 안된다고 성능에 이슈가 발생하는 것이 아니므로 쓸데 없이 많은 렌더 함수를 호출하는 것 자체를 관리해야 합니다.
+\- 따라서 리페인트가 안된다고 성능에 이슈가 발생하는 것이 아니므로 쓸데 없이 많은 렌더 함수를 호출하는 것 자체를 관리해야 합니다.(최적화)
 
 <br>
 
@@ -111,6 +111,7 @@ const [checkboxList, setCheckboxList] = useState([
 * **생명주기의 때에 따라 어떤 작업을 처리해야 하는지 지정**해줘야 불필요한 업데이트를 방지할 수 있다.
 * **클래스 컴포넌트** : **LifeCycle**메서드 사용
 * **함수형 컴포넌트** : **Hook**을 사용(예 : **useEffect**, **useState**)
+* **연관성 : 마운트 - 재렌더 - 언마운트 <-> 생성 - 업데이트 - 제거**
 
 
 
@@ -120,7 +121,7 @@ const [checkboxList, setCheckboxList] = useState([
 
 * 컴포넌트에서 **값(상태)의 변화를 감지**함
 
-  * 컴포넌트에서 관리하는 값(props, state)의 변화를 mount
+  * 컴포넌트에서 관리하는 **값(props, state)의 변화**를 **mount**
   * 이후 지속적으로 감지하여 값이 변화했을 경우 콜백 함(이벤트 리스너와 유사)
 
 * **클래스에서는 LifeCycle**을 이용해 조작
@@ -150,11 +151,15 @@ const [checkboxList, setCheckboxList] = useState([
 
 
 
-### 마운트와 언마운트
+### 마운트와 언마운트(생성, 제거)
 
 **컴포넌트의 시작과 끝에 한 번 씩 발생**
 
 #### 마운트
+
+맨처음 컴포넌트가 render 될때는 마운트과정을 거친다.  
+그러나 props, state가 변경되어 render 될 때는 마운트를 거치지 않는다.(재렌더)  
+그래서 마운트(Mount)는 **DOM 객체가 생성되고 브라우저에 나타나는 것을 의미**
 
 * state, defaultProps, context 등을 저장하고 설정하는 작업
 * 초기에는 렌더링을 하고 나서 DOM에 접근 가능 하므로, 마운트 단계가 끝나기 전에는 DOM에 접근할 수 없음
@@ -172,6 +177,8 @@ const [checkboxList, setCheckboxList] = useState([
 #### 빈 배열 예시(감지할 값X 상황)
 
 * 감지할 값이 있는상황은 위에서 확인(예시 들어둠)
+* **그런데 만약, 빈 배열조차 안 넣으면?** 그냥 **무엇이든 값 변경될 때마다** useEffect내에 코드 **실행**.  
+  **해결** : 따라서 **빈 배열**을 넣어서 **mount, unmount때만 실행** 시키게 만든것.
 
 ```jsx
 useEffect(() => {
@@ -186,15 +193,56 @@ useEffect(() => {
 
 
 
-#### 재렌더(업데이트)
+### 재렌더(업데이트)
 
-**컴포넌트의 props, state가 변경될 때마다 연산**
+**컴포넌트의 props, state가 변경될 때마다 연산** 
 
 * **상위 컴포넌트에서 전달한 props의 값이 바뀌거나, 현재 컴포넌트의 sate가 변경되었을 때,** 함수형 컴포넌트는 **함수 그 자체(함수 자체가 render 메서드)가 실행**됨
-* 실행되면서 함수 내에 정의된 함수들(**onClick 리스너 등) 혹은 변수**들은 **새로 선언**됨
+* 실행되면서 함수 내(자식)에 정의된 함수들(**onClick 리스너 등) 혹은 변수**들은 **새로 선언**됨
 * 때문에 함수 내에서 **변수는 거의 무의미하게 되기 때문에 useState 등의 훅 메서드**를 사용함
 
 ![image-20220701201736571](/images/2022-07-01-React 컴포넌트 렌더링 최적화/image-20220701201736571.png)
+
+
+
+### 재렌더와 마운트 구분
+
+예로 input태그의 값 입력해서 내부 데이터 수정될때 재렌더가 되는것이지 마운트가 되는건 아님.   
+
+보통 마운트는 처음 한번만 하는걸로 판단 하면 됨.  
+
+서버 구동해서 개발시 저장이나 웹 새로고침 할때 그때는 항상 마운트과정도 거침
+
+이처럼 햇갈릴 수 있기 때문에 잘 구분해서 useEffect나 등등 메소드 잘 사용할것
+
+```jsx
+// input태그 예시
+import { useCallback, useEffect, useState } from "react";
+
+const URL = "https://reqres.in/api/users";
+// API를 요청할 주소
+
+// API 요청 테스트하는 컴포넌트
+const RequestTest = () => {
+  let [data, changeData] = useState("")
+  // fetch API 요청 test(async/await으로 비동기 요청을 동기처럼 사용)
+  const callApiFetch = async () => {
+    const response = await fetch(URL)
+    console.log(response)
+    const data = await response.json();
+    console.log(data)
+    
+  }
+  // callApiFetch()
+  useEffect(() => {
+    // mount 시 API 요청
+    callApiFetch();
+    console.log("rendering~")
+  }, []); // 빈 배열 지우면 mount때만이 아니라 재렌더시 항상 실행함
+
+  return (<><input onChange={(e)=>{changeData(e.target.value)}}></input></>);
+}
+```
 
 <br>
 
@@ -450,6 +498,11 @@ export const FunctionCheckboxList = () => {
 
 ## 상태 최적화 관리
 
+**`React` 컴포넌트 내에서 수정시(state, props) 재렌더를 할텐데, 만약 어떠한 함수가 선언 되어 있다면 이 함수는 컴포넌트가 렌더링 될때마다 새로운 함수를 생성한다** 라는 등의 단점들을 최적화를 통해 예방  
+=> **함수 예**로 **useCallback**은 새로 생성말고, **기존 함수를 반환**해서 최적화  
+=> **변수 예**로 **useMemo**는 새로 생성말고, **기존 변수를 반환**해서 최적화  
+=> **props 예**로 **memo**는 **지정한 props(매개변수)의 변화에만 재렌더**를 하고, 나머진 X를 통해 최적화
+
 * checkbox를 변경에 반응하는 함수를 추가하는 것을 최적화 할것이다.
 * 전체 선택 기능 또한 구현할 것이다.
 * 그리고 여기 부분은 전부 **FunctioinCheckbox.jsx** 파일에서 다루는 내용이다.
@@ -480,6 +533,7 @@ export const FunctionCheckboxList = () => {
 
 * useMemo에는 변화를 감지하면 실행하여 **값을 반환할 콜백 함수와, 감지할 값들의 배열**을 전달
 * **감지할 값**들이 **변화될 때만 콜백 함수가 실행되어 값이 변경**됨
+  * 즉, **배열에 요소들이 없을 시** 처음 기억(생성)해둔 변수를 끝까지 사용하는 것
 * 상태를 통해 **추가적으로 값을 연산해야 하는 경우 사용**하기 좋음
 * 다른 변화로 인한 **불필요한 렌더링을 제거**할 수 있어 **성능 향상**에 도움
   * 아래 예시로, 재렌더마다 **AllCheck**가 새로 생성되는데 **useMemo** 사용시 **checkboxList만 변경될 때마다 재렌더**를 하기 때문에 불필요한 렌더링을 하지않아 **성능 향상**
@@ -503,10 +557,10 @@ const AllCheck = useMemo(
 
 * useCallback에는 변화를 감지하면 **생성할 함수와, 감지할 값들의 배열**을 전달
 * **감지할 값**들이 **변화될 때만 함수가 생성**됨
+  * 즉, **배열에 요소들이 없을 시** 처음 기억(생성)해둔 함수를 끝까지 사용하는 것
 * 다른 변화로 인한 **불필요한 렌더링을 제거**할 수 있어 **성능 향상**에 도움
   * 아래 예시로, 재렌더마다 **onChangeCheckbox**함수가 매번 새로 생성되는 단점.  
     **useCallback**을 사용한다면, 감지할 배열 값인 **checkboxList**가 변화할 시에만 재렌더하는 것이기 때문에 다른 변화에는 **onChangeCheckbox**함수가 새로 생성되지 않아서 **성능 향상**
-
 * **useCallback 사용방식 및 만든 onChangeCheckbox함수를 적용하는 방식을 확인(코드에서)**
   * **onChangeCheckbox**를 매개변수 id를 넘기기위해 **onChangeCheckbox(checkboxItem.id)**로 넘기면? 함수가 바로 실행이되며, 우리는 함수자체를 넘기고 싶기 때문에 **()=>{onChangeCheckbox(checkboxItem.id)}**이런 형태로 **화살표 함수로 한번 감싸는 것**이다.
 
