--- a/_posts/JavaScript/React(리액트_라이브러리)/2022-07-03-외부 API 호출한 것 React.js로 디자인까지.md
+++ b/_posts/JavaScript/React(리액트_라이브러리)/2022-07-03-외부 API 호출한 것 React.js로 디자인까지.md
@@ -1,7 +1,7 @@
 ---
 title: "외부 API 호출한 것 React.js로 디자인까지"
 categories : React_JS
-tag : [Javascript, 리액트, AJAX, fetch API]
+tag : [Javascript, 리액트, AJAX, fetch API, concat, filter, map]
 toc: true
 toc_sticky: true
 author_profile: false
@@ -13,8 +13,173 @@ typora-root-url: ../../..
 
 
 
+## 초기 폴더 구성
+
+**git bash**로 **npx create-react-app** 폴더명 으로 설치
+
+```bash
+npx create-react-app react_project
+```
+
+폴더 구성에서 **src 폴더 하위에 새로운 코드들 작성**할것. 
+
+* import시 **src 폴더를 기본으로 경로** 잡기 때문
+
+public 폴더에는 이미지 등 정적 파일들 작성할 것.
+
+<br>
+
+## `Material UI` 라이브러리 `@mui/material` 설치
+
+- 간단하게 `Material UI`를 사용할 수 있게 해주는 라이브러리로, `@emotion`를 정식 지원함.
+- `@mui/material`과 `@emotion`을 설치.
+
+```shell
+npm install @mui/material @emotion/react @emotion/styled
+```
+
+또는
+
+```shell
+yarn add @mui/material @emotion/react @emotion/styled
+```
+
+<br>
+
+## 외부 `API` 요청을 위해 네이버 개발자 센터 등록 및 키 발급
+
+- [네이버 개발자 센터](https://developers.naver.com/main/)
+- [네이버 영화 검색 API 문서](https://developers.naver.com/docs/search/movie/)
+
+<br>
+
+## `API` 키를 저장하는 방법
+
+- `/.env`
+
+  - 프로젝트의 환경 변수 등 민감한 정보를 저장하는 파일
+  - `REACT_APP_`으로 시작하는 변수를 사용할 수 있음
+  - [/.gitignore](../.gitignore)과 같이 저장소에 업로드 되지 않는 방법을 사용하여 관리
+  - `React`에서는 `process.env.REACT_APP_이름`으로 접근할 수 있음 (보통 이름 대문자)
+  - 해당 파일에 다음 내용 작성
+
+  ```
+  REACT_APP_NAVER_CLIENT_ID="<Client ID>"
+  REACT_APP_NAVER_CLIENT_SECRET="<Client Secret>"
+  ```
+
+  - `<Client ID>`와 `<Client Secret>`에 네이버 개발자 센터에서 발급받은 키 입력
+
+<br>
+
+## `CORS` 문제를 임시로 해결하기 위한 방안
+
+**서버가 아닌 클라이언트에서 데이터 요청시 자동으로 차단당하는 경우가 CORS 문제이다.**
+
+- `http-proxy-middleware` 모듈을 사용하여 해결할 수 있음
+
+```shell
+npm install http-proxy-middleware --save-dev
+```
+
+또는
+
+```shell
+yarn add -D http-proxy-middleware
+```
+
+- 모듈 설치 후 [`/src/setupProxy.js`](./src/setupProxy.js) 파일 생성 후 코드 작성
+- 개발 서버 재실행
+
+### setupProxy.js
+
+* **이번 API호출에서도 CORS문제가 발생하기 때문에 이부분 추가해서 임시로 사용하자**
+
+```javascript
+// "/api"로 접근시 https://openapi.naver.com/api.. 로 호출하게 된다.
+// 따라서 url을 fetch로 접근할 때 /api/v1/... 이런식으로 입력하면 된다는 것이다.
+const { createProxyMiddleware } = require("http-proxy-middleware");
+
+module.exports = function (app) {
+  app.use(
+    "/api",
+    createProxyMiddleware({
+      target: "https://openapi.naver.com",
+      changeOrigin: true,
+      pathRewrite: { "^/api/": "/" },
+    })
+  );
+};
+```
+
+<br>
+
+## 배열을 상태로 관리할 때 응용하기 좋은 내장 함수
+
+- 추가: `Array.prototype.concat`
+  * 배열을 합침
+- 변경: `Array.prototype.map`
+  * 산술된 인자를 받아 배열을 만듬
+- 삭제: `Array.prototype.filter`
+  * 불리언이 true인 값만 가지고 배열을 만듬
+- 그 외 추가 계산을 위한 함수
+  - `Array.prototype.reduce`, `Array.prototype.every`, `Array.prototype.some` 등
+
+<br>
+
 ## 컴포넌트 스타일링
 
 ### 디자인 초안확인
 
 ![image-20220704164612149](/images/2022-07-03-외부 API 호출한 것 React.js로 디자인까지/image-20220704164612149.png)
+
+
+
+#### RequestTest.jsx(API 호출 테스트용)
+
+단순히 API 호출 테스트를 위해서 지원하는 여러가지 **Tool(도구)**를 이용해도 되지만 여기선 **간단히 코드 작성**해서 요청에 응답을 받아 보겠다.
+
+```jsx
+// RequestTest.jsx
+import { useCallback, useEffect, useState } from "react";
+
+const URL = "/api/v1/search/movie.json?query=어벤져스";
+// https://openapi.naver.com/v1/search/movie.json?query=어벤져스
+// => API 요청할 주소이다.
+// 참고로 cors 문제 임시로 해결. 따라서 /api/로 접근.
+
+// API 요청 테스트하는 컴포넌트
+const RequestTest = () => {
+  // fetch API 요청 test(async/await으로 비동기 요청을 동기처럼 사용)
+  const callApiFetch = async () => {
+    const response = await fetch(URL, {
+      headers: {
+        "Content-Type": "application/json",
+        "X-Naver-Client-Id": process.env.REACT_APP_NAVER_CLIENT_ID,
+        "X-Naver-Client-Secret": process.env.REACT_APP_NAVER_CLIENT_SECRET,
+      },
+
+    })
+    console.log(response)
+    const data = await response.json();
+    console.log(data.items)
+  }
+  useEffect(() => {
+    // mount 시 API 요청
+    callApiFetch();
+    console.log("rendering~")
+  }, []);
+
+  return (<></>);
+}
+
+export default RequestTest;
+```
+
+
+
+### 컴포넌트 뼈대 구성
+
+
+
+
