--- a/_posts/JavaScript/React(리액트_라이브러리)/2022-07-03-외부 API 호출한 것 React.js로 디자인까지.md
+++ b/_posts/JavaScript/React(리액트_라이브러리)/2022-07-03-외부 API 호출한 것 React.js로 디자인까지.md
@@ -139,6 +139,9 @@ module.exports = function (app) {
 
 단순히 API 호출 테스트를 위해서 지원하는 여러가지 **Tool(도구)**를 이용해도 되지만 여기선 **간단히 코드 작성**해서 요청에 응답을 받아 보겠다.
 
+* **테스트 방법** : 단순히 App.js에서 RequestTest태그를 추가해서 test하면 된다.
+  * 테스트 중 **index.js**에 **<React.StrictMode>**를 사용해서 useEffect를 써도 console 두 번 찍히는 문제 발견했으며, 해당 태그 지우면 해결된다.
+
 ```jsx
 // RequestTest.jsx
 import { useCallback, useEffect, useState } from "react";
@@ -176,9 +179,150 @@ const RequestTest = () => {
 export default RequestTest;
 ```
 
+![image-20220706235423572](/images/2022-07-03-외부 API 호출한 것 React.js로 디자인까지/image-20220706235423572.png)
+
 
 
 ### 컴포넌트 뼈대 구성
+
+**배치를 위해 요소를 우선 설계**
+
+#### /apis/fetch.js
+
+* API 호출이 잘되는건 알았기 때문에 **fetch.js로 api호출은 따로 분류해서 관리**하자
+
+```js
+import qs from "qs";
+
+const URL = "/api/v1/search/movie.json";
+// https://openapi.naver.com/v1/search/movie.json
+// API를 요청할 주소
+// 참고로 cors 문제는 임시로 해결
+
+// offset : 데이터 시작 위치, limit : 데이터 개수 제한
+export const requestGetMovieList = async (offset =1, limit = 5) => {
+  const query = qs.stringify({
+    query: "어벤져스",
+    start: offset,
+    display: limit,
+  })
+  const URI = `${URL}?${query}`;
+
+  const response = await fetch(URI, {
+    headers: {
+      "Content-Type": "application/json",
+      "X-Naver-Client-Id": process.env.REACT_APP_NAVER_CLIENT_ID,
+      "X-Naver-Client-Secret": process.env.REACT_APP_NAVER_CLIENT_SECRET,
+    },
+  });
+
+  return await response.json();
+};
+```
+
+
+
+#### components/Movie.jsx
+
+* **컴포넌트 단위**로 구분하기 위해 따로 분류해서 관리하자
+
+```jsx
+import {memo} from "react";
+
+// 최적화
+// 지정한 props의 변화 외의 불필요한 컴포넌트 재렌더 방지하는 memo() 사용
+
+const Movie = ({ title, subtitle, image, link, director}) => {
+    return (
+        <div>
+            <div>
+                <img src={image} alt="movie-thumbnail"></img>
+            </div>
+            <div>
+                <a href={link}>
+                    <h3>{title}</h3>
+                    <h4>{subtitle}</h4>
+                    <p>감독 : {director}</p>
+                </a>
+            </div>
+        </div>
+    );
+}
+
+const MovieList = ({movieList}) => {
+    return (
+        <div>
+            {movieList.map((movieItem) => {
+                return(
+                    <Movie 
+                    key={movieItem.title} // key도 보내줘야 안전
+                    {...movieItem}>
+                    </Movie>
+                )
+            })}
+        </div>
+    )
+}
+
+export const Movies = memo(MovieList);
+// memo 함수를 통해 불필요한 컴포넌트 재렌더 방지
+// movieList 이외의 다른 값이 변경되어도 렌더링에 영향을 주지 않음
+
+export default Movie; // 기본값
+```
+
+
+
+#### containers/MovieContainer.jsx
+
+* **컴포넌트의 모음으로 컨테이너**로 구분해서 분류해서 관리하자
+* 뒤에 추가버튼, 체크박스 버튼 등등 기능 추가하게 되면 당연히 이 코드에서 더 수정이 될 예정이다
+
+```jsx
+import { useState, useCallback, useEffect } from "react";
+
+import { requestGetMovieList } from "../apis/fetch";
+import { Movies } from "../components/Movie";
+
+// 최적화
+// movieList가 변할때만 함수 새로 생성하기 위해 useCallback() 사용
+// 재렌더마다 API 요청이 아닌 mount 시에만 API 요청하기 위해 useEffect() 사용
+
+const MovieContainer = () => {
+    const [movieList, setMovieList] = useState([]);
+    
+    const callApiGetMovieList = useCallback(async () => {
+        const data = await requestGetMovieList()
+        // data.items => [{},{},...] 로 구성
+        setMovieList(data.items)
+        console.log(data.items)
+    }, [movieList])
+
+    useEffect(() => {
+        // mount 시에만 API 요청
+        callApiGetMovieList();
+    }, [])
+
+    return (
+        <div>
+            <Movies movieList={movieList}></Movies>
+        </div>
+    );
+}
+
+export default MovieContainer;
+```
+
+![image-20220707013003821](/images/2022-07-03-외부 API 호출한 것 React.js로 디자인까지/image-20220707013003821.png)
+
+
+
+### 컴포넌트 스타일 요소 구성
+
+**HTML 뼈대를 보고 태그에 이름을 붙이는 단계**
+
+
+
 
 
 
